# webserv

./: .gdb_history  .gitignore  CMakeLists.txt  Dockerfile  LICENSE  Makefile  README.md  arquivo.conf  compile_flags.txt  default.conf  docker-compose.yml  old_Makefile  server.conf  teste  webserv
.cache/clangd/index/: Client.cpp.F65A85721FDB6DCC.idx  Client.hpp.C8710067CA28205B.idx  Config.cpp.D419AFEF653092DD.idx  Config.hpp.4C559E566DB3DC9B.idx  ConfigUtils.cpp.EDC52A5D120F5C13.idx  Events.hpp.DFE5F5D41EF7B265.idx  InitServer.cpp.A758C9C4589A439F.idx  Request.cpp.865CA1F0241D745D.idx  Request.hpp.51DE5FB27CD84489.idx  Response.cpp.E25B9751AC8544A8.idx  Response.hpp.F8D6F1B2DB4838F6.idx  Server.cpp.9A034085655A68ED.idx  Server.hpp.616E5D80B9D580E6.idx  ServerUtils.cpp.FABF0B6F5FDA0C52.idx  common.hpp.2B867560FA7612FC.idx  main.cpp.16675D2DE94577A0.idx  main.cpp.3A0562D567B227F1.idx  testConfig.cpp.5B39071BEECEF02E.idx  testItoa.cpp.D45740BBDDDB280A.idx  testRequest.cpp.A44712816F571EAB.idx  testServer.cpp.4C2BEAEF5CDC2DDD.idx  utils.cpp.D8BFE5D23D36AA4A.idx
.github/: workflow.yaml
.github/workflows/: feature.yml
cmake/: UpdateSubModules.cmake
config/: default.conf
configurations/: default.conf
include/: Client.hpp  Config.hpp  Events.hpp  Parser.hpp  Request.hpp  Response.hpp  Server.hpp  common.hpp
scripts/: build_and_run_tests.sh  entrypoint.sh  submodules.sh
src/: Client.cpp  Config.cpp  ConfigUtils.cpp  Events.cpp  InitServer.cpp  Parser.cpp  Request.cpp  Response.cpp  ResponseUtils.cpp  Server.cpp  ServerUtils.cpp  main.cpp  utils.cpp
src/Configuration/: Configuration.cpp  Configuration.hpp
src/Server/: Server.cpp  Server.hpp  sv.cpp
src/connection/: AStream.cpp  AStream.hpp  Connection.cpp  Connection.hpp  IStream.hpp  WebServ.cpp  WebServ.hpp
src/constant/: code.hpp  env.hpp  header.hpp  method.cpp  method.hpp  size.hpp  standard.hpp  status.hpp  step.hpp
src/file/: Cgi.cpp  Cgi.hpp  Directory.cpp  Directory.hpp  Environment.cpp  Environment.hpp  File.cpp  File.hpp  Page.cpp  Page.hpp  Resource.cpp  Resource.hpp  Text.cpp  Text.hpp
src/network/: NetworkSetup.cpp  NetworkSetup.hpp
src/parser/: directive.cpp  directive.hpp  parser.cpp  parser.hpp
src/parser/configuration/: Http.cpp  Http.hpp  Location.cpp  Location.hpp  Server.cpp  Server.hpp
src/parser/mime/: Mime.cpp  Mime.hpp  mimes.json
src/parser/request/: request.cpp  request.hpp
src/parser_config_file/: CheckFile.cpp  CheckFile.hpp  ConfigParser.cpp  ConfigParser.hpp  ConfigTypes.hpp  check_file.cpp  check_file.h
src/response/: URL.cpp  URL.hpp  process.cpp  process.hpp  response.cpp  response.hpp
src/response/methods/: delete.cpp  get.cpp  post.cpp
src/server/: Server.cpp  Server.hpp
src/service/logger/: logger.cpp  logger.hpp
src/util/color/: color.cpp  color.hpp
src/utils/: intToWNStr.cpp  inutil.cpp  utils.h
tests/: CMakeCommon.cmake  CMakeLists.txt  Common.hpp  README.md  alternativeConfParser.cpp  index.html  main  main.cpp  monolito.cpp  nonblk.cpp  server.conf  testClient.cpp  testConfig.cpp  testItoa.cpp  testParser.cpp  testRequest.cpp  testResponse.hpp  testServer.cpp  test_Client.cpp  test_default.conf
tests/http/: CMakeLists.txt  header_test.cpp  request_test.cpp
tests/mime/: CMakeLists.txt  mime_test.cpp
tests/mocks/: CMakeLists.txt  MockLocation.hpp  MockParser.hpp  MockServer.hpp  mock_connection.hpp
tests/network/: CMakeLists.txt  connection_test.cpp
tests/parser/: CMakeLists.txt  config_parser_test.cpp  parser_test.cpp
tests/response/: CMakeLists.txt  response_builder_test.cpp  url_simple_test.cpp  url_test.cpp  url_test_simple.cpp
tests/utils/: CMakeLists.txt  code_test.cpp  directive_test.cpp  location_test.cpp  status_test.cpp  test_helpers.hpp
var/www/html/: 404.html  index.html
var/www/html/cgi/: cgi_test.php  cookies.php  index.html  tic_tac_toe.py  upload_handler.sh
var/www/html/directory/: directory_file.txt
var/www/html/mysite/: example-req-get.txt  (+6 more)
web/: 403.html  404.html  405.html  413.html  500.html  Dockerfile  index.html  nginx.conf
(+14 files in other folders)
